--- a/backend/Dockerfile-simple
+++ b/backend/Dockerfile-simple
@@ -1,7 +1,13 @@
 FROM python:3.11-slim
 WORKDIR /app
-# Пропускаем обновление pip и устанавливаем пакеты с большим таймаутом
-RUN pip install --no-cache-dir --default-timeout=300 fastapi==0.104.1 uvicorn[standard]==0.24.0 httpx==0.25.1
-COPY ./app/main.py .
-EXPOSE 8000
+
+# Установка зависимостей через китайское зеркало
+ENV PIP_INDEX_URL=https://mirrors.aliyun.com/pypi/simple/
+
+RUN pip install --no-cache-dir --default-timeout=300 \
+    fastapi==0.104.1 \
+    uvicorn[standard]==0.24.0 \
+    httpx==0.25.1
+
+COPY ./app /app
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
