--- a/backend/package.json
+++ b/backend/package.json
@@ -1,15 +1,20 @@
 {
-  "name": "backend",
+  "name": "metodika-coffee-backend",
   "version": "1.0.0",
-  "main": "server.js",
+  "description": "Простой Node.js сервер для Metodika Coffee",
+  "main": "simple-server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node simple-server.js",
+    "dev": "nodemon simple-server.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
