--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,75 @@
-# Конфигурационные файлы
-.env
-.env.local
-.env.production
+# Резервные копии и бэкапы
+backups/
+*.backup
+*_backup_*
+*-backup-*
+*backup*
+.build_backup*
+*backup_*
 
-# Логи и системные файлы
+# Временные и тестовые файлы
+*.old
+*-old.js
+*.tmp
+*.temp
 *.log
-logs/
+*test*
+*_test*
+TEST*
+*.test.*
+
+# Системные файлы
 .DS_Store
 Thumbs.db
 
-# Зависимости
-node_modules/
-vendor/
+# Файлы IDE
+.vscode/
+.idea/
+*.swp
+*.swo
 
-# Бинарные файлы и БД
-*.sql
-*.dump
-*.db
-__pycache__/
-*.pyc
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Логи
+logs/
+*.log
+
+# Отчеты анализа (не для продакшена)
+STRUCTURE_REPORT.md
+SYSTEM_STATUS.txt
+ANALYSIS_*
+REPORT_*
+
+# Скрипты анализа
+analyze_structure.sh
+test-site.sh
+final-system-test.sh
+
+# HTML тестовые файлы
+frontend-build-test.html
+test-frontend-api.html
+
+# Старые версии файлов
+frontend/src/Checkout.old.js
+frontend/src/Menu-backup-*.js
+frontend/src/components/Cart-fixed.js
+frontend/src/Menu-updated.js
+
+# Резервные сборки
+frontend/build_backup_*/
+
+# Устаревшие файлы сервера (если есть)
+backend/orders-server-3001.js.backup
+backend/simple-server.js
+backend/server.js
