--- a/.gitignore
+++ b/.gitignore
@@ -1,75 +1,114 @@
-# Резервные копии и бэкапы
-backups/
-*.backup
-*_backup_*
-*-backup-*
-*backup*
-.build_backup*
-*backup_*
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+.pytest_cache/
 
-# Временные и тестовые файлы
-*.old
-*-old.js
-*.tmp
-*.temp
-*.log
-*test*
-*_test*
-TEST*
-*.test.*
-
-# Системные файлы
-.DS_Store
-Thumbs.db
-
-# Файлы IDE
-.vscode/
-.idea/
-*.swp
-*.swo
+# Virtual environments
+venv/
+env/
+.env/
+.venv/
+ENV/
 
 # Node.js
 node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+lerna-debug.log*
 
-# Environment variables
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+
+# Build directories
+build/
+dist/
+
+# Dependency directories
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# dotenv environment variables file
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# Логи
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Logs
 logs/
 *.log
 
-# Отчеты анализа (не для продакшена)
-STRUCTURE_REPORT.md
-SYSTEM_STATUS.txt
-ANALYSIS_*
-REPORT_*
+# Runtime data
+pids/
+*.pid
+*.seed
+*.pid.lock
 
-# Скрипты анализа
-analyze_structure.sh
-test-site.sh
-final-system-test.sh
+# Backups
+backups/
+*.backup
+*_backup_*
+*-backup-*
 
-# HTML тестовые файлы
-frontend-build-test.html
-test-frontend-api.html
+# Temporary files
+*.tmp
+*.temp
+*.old
 
-# Старые версии файлов
-frontend/src/Checkout.old.js
-frontend/src/Menu-backup-*.js
-frontend/src/components/Cart-fixed.js
-frontend/src/Menu-updated.js
-
-# Резервные сборки
-frontend/build_backup_*/
-
-# Устаревшие файлы сервера (если есть)
-backend/orders-server-3001.js.backup
-backend/simple-server.js
-backend/server.js
+# Test files
+*test*
+*_test*
+TEST*
